# github-templates

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
scripts/: before_deploy.ps1  before_deploy.sh  before_install.sh  install.sh  script.sh
src/: cli.rs  error.rs  lib.rs  main.rs  templates.rs
templates/: bug_report.md  feature_request.md  other_issue.md  question.md
